--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 fancy-regex = "0.12.0"
+itertools = "0.12.0"
 lazy_static = "1.4.0"
 once_cell = "1.19.0"
 regex = "1.10.2"
