--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2021"
 fancy-regex = "0.12.0"
 itertools = "0.12.0"
 lazy_static = "1.4.0"
+michie = "3.0.2"
 once_cell = "1.19.0"
 regex = "1.10.2"
